tests/NormalTests/paczka1/fuzzy1/92617985.err
Error in line 3: Mt3aa0 A407 24,5
Error in line 16: Ilra3xoXLn A407 88,60
Error in line 33: Mt3aa0 A2b6 54,6
Error in line 27: S311 S311 1,8
Error in line 14: zUO5B A504 98,4
Error in line 38: Mt3aa0 A407 41,5
